# wszib

ai/: string-matching.ipynb
algorithms/huffman-coding/: .rustfmt.toml
assembly/lab1_a/: task1.asm  task2.asm  task3.asm  task4.asm  task5.asm
assembly/lab1_b/: task1.asm  task2.asm  task3.asm  task4.asm  task5.asm  task6.asm  task7.asm  task8.asm
c/: Makefile  README.md
c/examples/: binary-tree.c  linked-list.c  matrix.c  vector.c
computational-methods/lab1/: chart.ipynb  go.mod  main.go  report.md  sequence1_float32.csv  sequence1_float64.csv  sequence2_float32.csv  sequence2_float64.csv  task.md
computational-methods/lab10/: .gitignore  Makefile  brent_minim.c  plot.gp  quad_golden.c
computational-methods/lab2/: .gitignore  Makefile  README.md  chart.gpl  chart2.gpl  chart3.gpl  dokladnosc.c
computational-methods/lab3/: .gitignore  Makefile  chart1.gpl  chart2.gpl  chart3.gpl  inter.txt  inter_akima.txt  inter_cspline.txt  interpolacja.c  wartosci.txt
computational-methods/lab4/: .gitignore  Makefile  func1.c  func1.gpl  func2.c  func2.gpl  func3.c  func3.gpl
computational-methods/lab5/: .gitignore  Makefile  calculate_integrals_gsl.c  rectangle_integration  rectangle_integration.c  result.txt  result2.txt  task2  task2.c
computational-methods/lab7/: main.c  makefile  plot.gp  results.csv  run.sh
computational-methods/lab8/: main.c  (+2 more)
cpp/cyclic-buffer/: CMakeLists.txt  Makefile  README.md
cpp/cyclic-buffer/src/: cyclic_buffer.hpp  main.cpp
discrete-math/: example.ts  main.ts
java/: build.gradle  settings.gradle
java-advanced/: db.txt
(+181 files in other folders)
